k8s_streamsets_minikube/auth-sdc/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-demo
  labels:
    svc: nginx-demo
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: nginx-demo
