k8s_streamsets_minikube/auth-sdc/auth-sdc-svc.yaml
apiVersion: v1
  kind: Service
  metadata:
    name: auth-sdc
    namespace: streamsets
    labels:
      app: auth-sdc
  spec:
    ports:
    - name: http
      port: 18630
      targetPort: 18630
      protocol: TCP
    selector:
      app: auth-sdc
- apiVersion: extensions/v1beta1
  kind: Ingress
  metadata:
    name: auth-sdc
    namespace: streamsets
  spec:
    rules:
    - host: minikube.sdc
      http:
        paths:
        - path: /
          backend:
            serviceName: auth-sdc
            servicePort: 18630
