k8s_streamsets_minikube/auth-sdc/nginx-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-demo
spec:
  rules:
    - host: minikube.demo
      http:
        paths:
          - backend:
             serviceName: nginx-demo
             servicePort: 80
